# auroratools

./: .gitignore  README.md  setup.cfg
src/auroratools/core/: attrs_parsing.py  base.py  item_querying.py  nnf_querying.py  utils.py
