[metadata]
name = auroratools
version = 0.0.1
author = Julia Pöschl
description = A python toolset to parse the xml content files of the Aurora character builder
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include = auroratools.*
